--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,14 @@
     <string name="settings_port_summary">Tracking server TCP port</string>
     <string name="settings_interval_title">Frequency</string>
     <string name="settings_interval_summary">Messages interval in seconds</string>
+    <string name="settings_min_accuracy_title">Min accuracy</string>
+    <string name="settings_min_accuracy_summary">Only take locations which has enough accuracy</string>
+    <string name="settings_distance_threshold_title">Distance threshold</string>
+    <string name="settings_distance_threshold_summary">Report when location change distance reach threshold if threshold > 0</string>
+    <string name="settings_speed_delta_threshold_title">Speed delta threshold</string>
+    <string name="settings_speed_delta_threshold_summary">Report when speed change delta reach the threshold</string>
+    <string name="settings_course_delta_threshold_title">Course delta threshold</string>
+    <string name="settings_course_delta_threshold_summary">Report when course degrees change delta reach the threshold (with the min speed of previous setting)</string>
     <string name="settings_status_title">Service status</string>
     <string name="settings_status_off">Start</string>
     <string name="settings_status_on">Stop</string>
